--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
   - pip list
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  - "./cc-test-reporter before-build"
 script:
-  - nosetests --with-coverage --cover-erase --cover-package=broker --cover-xml
+  - nosetests --with-coverage --cover-erase --cover-package=broker,broker_app --cover-xml
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 notifications:
